# target-marketo

./: .gitignore  README.md  meltano.yml  pyproject.toml  ruff.toml
target_activecampaign/: __init__.py  client.py  sinks.py  target.py
target_marketo/: auth.py  client.py  sinks.py  target.py
tests/: __init__.py  test_core.py
